Visible leaders mechanic added

--- a/TGC Great Figureheads/localisation/00_political_leaders.csv
+++ b/TGC Great Figureheads/localisation/00_political_leaders.csv
@@ -45,6 +45,28 @@ african_ambitious_union_boss;§GAmbitious Union Boss§!;;;;;;;;;;;;;
 african_ambitious_union_boss_desc;Our leader hails from the ranks of the blue-collar unions, a man who has worked his way up through the ranks... right to the very top.;;;;;;;;;;;;;
 african_dour_economist;§RDour Economist§!;;;;;;;;;;;;;
 african_dour_economist_desc;Our leader has a penchant for numbers and economics, even if he isn't particularly good with people.;;;;;;;;;;;;;
+capital_african_expert_diplomat;Country Leader\n§GExpert Diplomat;;;;;;;;;;;;;
+capital_african_successful_industrialist;Country Leader\n§GSuccessful Industrialist;;;;;;;;;;;;;
+capital_african_ivory_tower_intellectual;Country Leader\n§GIvory Tower Intellectual;;;;;;;;;;;;;
+capital_african_man_of_the_people;Country Leader\n§GMan of the People;;;;;;;;;;;;;
+capital_african_landed_gentleman;Country Leader\n§GLanded Gentleman;;;;;;;;;;;;;
+capital_african_military_man;Country Leader\n§GMilitary Man;;;;;;;;;;;;;
+capital_african_lord_admiral;Country Leader\n§GLord Admiral;;;;;;;;;;;;;
+capital_african_raving_loon;Country Leader\n§RRaving Loon;;;;;;;;;;;;;
+capital_african_luddite;Country Leader\n§RLuddite;;;;;;;;;;;;;
+capital_african_great_statesman;Country Leader\n§GGreat Statesman;;;;;;;;;;;;;
+capital_african_backroom_boy;Country Leader\n§GBackroom Boy;;;;;;;;;;;;;
+capital_african_great_reformer;Country Leader\n§GGreat Reformer;;;;;;;;;;;;;
+capital_african_gauche_buffoon;Country Leader\n§RGauche Buffoon;;;;;;;;;;;;;
+capital_african_administrative_genius;Country Leader\n§GAdministrative Genius;;;;;;;;;;;;;
+capital_african_visionary_thinker;Country Leader\n§GVisionary Thinker;;;;;;;;;;;;;
+capital_african_competent_placeholder;Country Leader\n§GCompetent Placeholder;;;;;;;;;;;;;
+capital_african_imperious_autocrat;Country Leader\n§GImperious Autocrat;;;;;;;;;;;;;
+capital_african_prince_of_terror;Country Leader\n§GPrince of Terror;;;;;;;;;;;;;
+capital_african_efficient_sociopath;Country Leader\n§GEfficient Sociopath;;;;;;;;;;;;;
+capital_african_pig_headed_isolationist;Country Leader\n§RPig-Headed Isolationist;;;;;;;;;;;;;
+capital_african_ambitious_union_boss;Country Leader\n§GAmbitious Union Boss;;;;;;;;;;;;;
+capital_african_dour_economist;Country Leader\n§RDour Economist;;;;;;;;;;;;;
 #############################################;;;;;;;x
 #Arab Leaders;;;;;;;x
 #############################################;;;;;;;x 
@@ -92,6 +114,28 @@ arab_ambitious_union_boss;§GAmbitious Union Boss§!;;;;;;;;;;;;;
 arab_ambitious_union_boss_desc;Our leader hails from the ranks of the blue-collar unions, a man who has worked his way up through the ranks... right to the very top.;;;;;;;;;;;;;
 arab_dour_economist;§RDour Economist§!;;;;;;;;;;;;;
 arab_dour_economist_desc;Our leader has a penchant for numbers and economics, even if he isn't particularly good with people.;;;;;;;;;;;;;
+capital_arab_expert_diplomat;Country Leader\n§GExpert Diplomat;;;;;;;;;;;;;
+capital_arab_successful_industrialist;Country Leader\n§GSuccessful Industrialist;;;;;;;;;;;;;
+capital_arab_ivory_tower_intellectual;Country Leader\n§GIvory Tower Intellectual;;;;;;;;;;;;;
+capital_arab_man_of_the_people;Country Leader\n§GMan of the People;;;;;;;;;;;;;
+capital_arab_landed_gentleman;Country Leader\n§GLanded Gentleman;;;;;;;;;;;;;
+capital_arab_military_man;Country Leader\n§GMilitary Man;;;;;;;;;;;;;
+capital_arab_lord_admiral;Country Leader\n§GLord Admiral;;;;;;;;;;;;;
+capital_arab_raving_loon;Country Leader\n§RRaving Loon;;;;;;;;;;;;;
+capital_arab_luddite;Country Leader\n§RLuddite;;;;;;;;;;;;;
+capital_arab_great_statesman;Country Leader\n§GGreat Statesman;;;;;;;;;;;;;
+capital_arab_backroom_boy;Country Leader\n§GBackroom Boy;;;;;;;;;;;;;
+capital_arab_great_reformer;Country Leader\n§GGreat Reformer;;;;;;;;;;;;;
+capital_arab_gauche_buffoon;Country Leader\n§RGauche Buffoon;;;;;;;;;;;;;
+capital_arab_administrative_genius;Country Leader\n§GAdministrative Genius;;;;;;;;;;;;;
+capital_arab_visionary_thinker;Country Leader\n§GVisionary Thinker;;;;;;;;;;;;;
+capital_arab_competent_placeholder;Country Leader\n§GCompetent Placeholder;;;;;;;;;;;;;
+capital_arab_imperious_autocrat;Country Leader\n§GImperious Autocrat;;;;;;;;;;;;;
+capital_arab_prince_of_terror;Country Leader\n§GPrince of Terror;;;;;;;;;;;;;
+capital_arab_efficient_sociopath;Country Leader\n§GEfficient Sociopath;;;;;;;;;;;;;
+capital_arab_pig_headed_isolationist;Country Leader\n§RPig-Headed Isolationist;;;;;;;;;;;;;
+capital_arab_ambitious_union_boss;Country Leader\n§GAmbitious Union Boss;;;;;;;;;;;;;
+capital_arab_dour_economist;Country Leader\n§RDour Economist;;;;;;;;;;;;;
 #############################################;;;;;;;x
 #Asian Leaders;;;;;;;x
 #############################################;;;;;;;x
@@ -139,6 +183,28 @@ asian_ambitious_union_boss;§GAmbitious Union Boss§!;;;;;;;;;;;;;
 asian_ambitious_union_boss_desc;Our leader hails from the ranks of the blue-collar unions, a man who has worked his way up through the ranks... right to the very top.;;;;;;;;;;;;;
 asian_dour_economist;§RDour Economist§!;;;;;;;;;;;;;
 asian_dour_economist_desc;Our leader has a penchant for numbers and economics, even if he isn't particularly good with people.;;;;;;;;;;;;;
+capital_asian_expert_diplomat;Country Leader\n§GExpert Diplomat;;;;;;;;;;;;;
+capital_asian_successful_industrialist;Country Leader\n§GSuccessful Industrialist;;;;;;;;;;;;;
+capital_asian_ivory_tower_intellectual;Country Leader\n§GIvory Tower Intellectual;;;;;;;;;;;;;
+capital_asian_man_of_the_people;Country Leader\n§GMan of the People;;;;;;;;;;;;;
+capital_asian_landed_gentleman;Country Leader\n§GLanded Gentleman;;;;;;;;;;;;;
+capital_asian_military_man;Country Leader\n§GMilitary Man;;;;;;;;;;;;;
+capital_asian_lord_admiral;Country Leader\n§GLord Admiral;;;;;;;;;;;;;
+capital_asian_raving_loon;Country Leader\n§RRaving Loon;;;;;;;;;;;;;
+capital_asian_luddite;Country Leader\n§RLuddite;;;;;;;;;;;;;
+capital_asian_great_statesman;Country Leader\n§GGreat Statesman;;;;;;;;;;;;;
+capital_asian_backroom_boy;Country Leader\n§GBackroom Boy;;;;;;;;;;;;;
+capital_asian_great_reformer;Country Leader\n§GGreat Reformer;;;;;;;;;;;;;
+capital_asian_gauche_buffoon;Country Leader\n§RGauche Buffoon;;;;;;;;;;;;;
+capital_asian_administrative_genius;Country Leader\n§GAdministrative Genius;;;;;;;;;;;;;
+capital_asian_visionary_thinker;Country Leader\n§GVisionary Thinker;;;;;;;;;;;;;
+capital_asian_competent_placeholder;Country Leader\n§GCompetent Placeholder;;;;;;;;;;;;;
+capital_asian_imperious_autocrat;Country Leader\n§GImperious Autocrat;;;;;;;;;;;;;
+capital_asian_prince_of_terror;Country Leader\n§GPrince of Terror;;;;;;;;;;;;;
+capital_asian_efficient_sociopath;Country Leader\n§GEfficient Sociopath;;;;;;;;;;;;;
+capital_asian_pig_headed_isolationist;Country Leader\n§RPig-Headed Isolationist;;;;;;;;;;;;;
+capital_asian_ambitious_union_boss;Country Leader\n§GAmbitious Union Boss;;;;;;;;;;;;;
+capital_asian_dour_economist;Country Leader\n§RDour Economist;;;;;;;;;;;;;
 #############################################;;;;;;;x
 #European Leaders;;;;;;;x
 #############################################;;;;;;;x
@@ -186,6 +252,28 @@ european_ambitious_union_boss;§GAmbitious Union Boss§!;;;;;;;;;;;;;
 european_ambitious_union_boss_desc;Our leader hails from the ranks of the blue-collar unions, a man who has worked his way up through the ranks... right to the very top.;;;;;;;;;;;;;
 european_dour_economist;§RDour Economist§!;;;;;;;;;;;;;
 european_dour_economist_desc;Our leader has a penchant for numbers and economics, even if he isn't particularly good with people.;;;;;;;;;;;;;
+capital_european_expert_diplomat;Country Leader\n§GExpert Diplomat;;;;;;;;;;;;;
+capital_european_successful_industrialist;Country Leader\n§GSuccessful Industrialist;;;;;;;;;;;;;
+capital_european_ivory_tower_intellectual;Country Leader\n§GIvory Tower Intellectual;;;;;;;;;;;;;
+capital_european_man_of_the_people;Country Leader\n§GMan of the People;;;;;;;;;;;;;
+capital_european_landed_gentleman;Country Leader\n§GLanded Gentleman;;;;;;;;;;;;;
+capital_european_military_man;Country Leader\n§GMilitary Man;;;;;;;;;;;;;
+capital_european_lord_admiral;Country Leader\n§GLord Admiral;;;;;;;;;;;;;
+capital_european_raving_loon;Country Leader\n§RRaving Loon;;;;;;;;;;;;;
+capital_european_luddite;Country Leader\n§RLuddite;;;;;;;;;;;;;
+capital_european_great_statesman;Country Leader\n§GGreat Statesman;;;;;;;;;;;;;
+capital_european_backroom_boy;Country Leader\n§GBackroom Boy;;;;;;;;;;;;;
+capital_european_great_reformer;Country Leader\n§GGreat Reformer;;;;;;;;;;;;;
+capital_european_gauche_buffoon;Country Leader\n§RGauche Buffoon;;;;;;;;;;;;;
+capital_european_administrative_genius;Country Leader\n§GAdministrative Genius;;;;;;;;;;;;;
+capital_european_visionary_thinker;Country Leader\n§GVisionary Thinker;;;;;;;;;;;;;
+capital_european_competent_placeholder;Country Leader\n§GCompetent Placeholder;;;;;;;;;;;;;
+capital_european_imperious_autocrat;Country Leader\n§GImperious Autocrat;;;;;;;;;;;;;
+capital_european_prince_of_terror;Country Leader\n§GPrince of Terror;;;;;;;;;;;;;
+capital_european_efficient_sociopath;Country Leader\n§GEfficient Sociopath;;;;;;;;;;;;;
+capital_european_pig_headed_isolationist;Country Leader\n§RPig-Headed Isolationist;;;;;;;;;;;;;
+capital_european_ambitious_union_boss;Country Leader\n§GAmbitious Union Boss;;;;;;;;;;;;;
+capital_european_dour_economist;Country Leader\n§RDour Economist;;;;;;;;;;;;;
 #############################################;;;;;;;x
 #Indian Leaders;;;;;;;x
 #############################################;;;;;;;x
@@ -233,6 +321,28 @@ indian_ambitious_union_boss;§GAmbitious Union Boss§!;;;;;;;;;;;;;
 indian_ambitious_union_boss_desc;Our leader hails from the ranks of the blue-collar unions, a man who has worked his way up through the ranks... right to the very top.;;;;;;;;;;;;;
 indian_dour_economist;§RDour Economist§!;;;;;;;;;;;;;
 indian_dour_economist_desc;Our leader has a penchant for numbers and economics, even if he isn't particularly good with people.;;;;;;;;;;;;;
+capital_indian_expert_diplomat;Country Leader\n§GExpert Diplomat;;;;;;;;;;;;;
+capital_indian_successful_industrialist;Country Leader\n§GSuccessful Industrialist;;;;;;;;;;;;;
+capital_indian_ivory_tower_intellectual;Country Leader\n§GIvory Tower Intellectual;;;;;;;;;;;;;
+capital_indian_man_of_the_people;Country Leader\n§GMan of the People;;;;;;;;;;;;;
+capital_indian_landed_gentleman;Country Leader\n§GLanded Gentleman;;;;;;;;;;;;;
+capital_indian_military_man;Country Leader\n§GMilitary Man;;;;;;;;;;;;;
+capital_indian_lord_admiral;Country Leader\n§GLord Admiral;;;;;;;;;;;;;
+capital_indian_raving_loon;Country Leader\n§RRaving Loon;;;;;;;;;;;;;
+capital_indian_luddite;Country Leader\n§RLuddite;;;;;;;;;;;;;
+capital_indian_great_statesman;Country Leader\n§GGreat Statesman;;;;;;;;;;;;;
+capital_indian_backroom_boy;Country Leader\n§GBackroom Boy;;;;;;;;;;;;;
+capital_indian_great_reformer;Country Leader\n§GGreat Reformer;;;;;;;;;;;;;
+capital_indian_gauche_buffoon;Country Leader\n§RGauche Buffoon;;;;;;;;;;;;;
+capital_indian_administrative_genius;Country Leader\n§GAdministrative Genius;;;;;;;;;;;;;
+capital_indian_visionary_thinker;Country Leader\n§GVisionary Thinker;;;;;;;;;;;;;
+capital_indian_competent_placeholder;Country Leader\n§GCompetent Placeholder;;;;;;;;;;;;;
+capital_indian_imperious_autocrat;Country Leader\n§GImperious Autocrat;;;;;;;;;;;;;
+capital_indian_prince_of_terror;Country Leader\n§GPrince of Terror;;;;;;;;;;;;;
+capital_indian_efficient_sociopath;Country Leader\n§GEfficient Sociopath;;;;;;;;;;;;;
+capital_indian_pig_headed_isolationist;Country Leader\n§RPig-Headed Isolationist;;;;;;;;;;;;;
+capital_indian_ambitious_union_boss;Country Leader\n§GAmbitious Union Boss;;;;;;;;;;;;;
+capital_indian_dour_economist;Country Leader\n§RDour Economist;;;;;;;;;;;;;
 #############################################;;;;;;;x
 #Native American Leaders;;;;;;;x
 #############################################;;;;;;;x
@@ -280,6 +390,28 @@ nativeamerican_ambitious_union_boss;§GAmbitious Union Boss§!;;;;;;;;;;;;;
 nativeamerican_ambitious_union_boss_desc;Our leader hails from the ranks of the blue-collar unions, a man who has worked his way up through the ranks... right to the very top.;;;;;;;;;;;;;
 nativeamerican_dour_economist;§RDour Economist§!;;;;;;;;;;;;;
 nativeamerican_dour_economist_desc;Our leader has a penchant for numbers and economics, even if he isn't particularly good with people.;;;;;;;;;;;;;
+capital_nativeamerican_expert_diplomat;Country Leader\n§GExpert Diplomat;;;;;;;;;;;;;
+capital_nativeamerican_successful_industrialist;Country Leader\n§GSuccessful Industrialist;;;;;;;;;;;;;
+capital_nativeamerican_ivory_tower_intellectual;Country Leader\n§GIvory Tower Intellectual;;;;;;;;;;;;;
+capital_nativeamerican_man_of_the_people;Country Leader\n§GMan of the People;;;;;;;;;;;;;
+capital_nativeamerican_landed_gentleman;Country Leader\n§GLanded Gentleman;;;;;;;;;;;;;
+capital_nativeamerican_military_man;Country Leader\n§GMilitary Man;;;;;;;;;;;;;
+capital_nativeamerican_lord_admiral;Country Leader\n§GLord Admiral;;;;;;;;;;;;;
+capital_nativeamerican_raving_loon;Country Leader\n§RRaving Loon;;;;;;;;;;;;;
+capital_nativeamerican_luddite;Country Leader\n§RLuddite;;;;;;;;;;;;;
+capital_nativeamerican_great_statesman;Country Leader\n§GGreat Statesman;;;;;;;;;;;;;
+capital_nativeamerican_backroom_boy;Country Leader\n§GBackroom Boy;;;;;;;;;;;;;
+capital_nativeamerican_great_reformer;Country Leader\n§GGreat Reformer;;;;;;;;;;;;;
+capital_nativeamerican_gauche_buffoon;Country Leader\n§RGauche Buffoon;;;;;;;;;;;;;
+capital_nativeamerican_administrative_genius;Country Leader\n§GAdministrative Genius;;;;;;;;;;;;;
+capital_nativeamerican_visionary_thinker;Country Leader\n§GVisionary Thinker;;;;;;;;;;;;;
+capital_nativeamerican_competent_placeholder;Country Leader\n§GCompetent Placeholder;;;;;;;;;;;;;
+capital_nativeamerican_imperious_autocrat;Country Leader\n§GImperious Autocrat;;;;;;;;;;;;;
+capital_nativeamerican_prince_of_terror;Country Leader\n§GPrince of Terror;;;;;;;;;;;;;
+capital_nativeamerican_efficient_sociopath;Country Leader\n§GEfficient Sociopath;;;;;;;;;;;;;
+capital_nativeamerican_pig_headed_isolationist;Country Leader\n§RPig-Headed Isolationist;;;;;;;;;;;;;
+capital_nativeamerican_ambitious_union_boss;Country Leader\n§GAmbitious Union Boss;;;;;;;;;;;;;
+capital_nativeamerican_dour_economist;Country Leader\n§RDour Economist;;;;;;;;;;;;;
 #############################################;;;;;;;x
 #Russian Leaders;;;;;;;x
 #############################################;;;;;;;x
@@ -327,6 +459,28 @@ russian_ambitious_union_boss;§GAmbitious Union Boss§!;;;;;;;;;;;;;
 russian_ambitious_union_boss_desc;Our leader hails from the ranks of the blue-collar unions, a man who has worked his way up through the ranks... right to the very top.;;;;;;;;;;;;;
 russian_dour_economist;§RDour Economist§!;;;;;;;;;;;;;
 russian_dour_economist_desc;Our leader has a penchant for numbers and economics, even if he isn't particularly good with people.;;;;;;;;;;;;;
+capital_russian_expert_diplomat;Country Leader\n§GExpert Diplomat;;;;;;;;;;;;;
+capital_russian_successful_industrialist;Country Leader\n§GSuccessful Industrialist;;;;;;;;;;;;;
+capital_russian_ivory_tower_intellectual;Country Leader\n§GIvory Tower Intellectual;;;;;;;;;;;;;
+capital_russian_man_of_the_people;Country Leader\n§GMan of the People;;;;;;;;;;;;;
+capital_russian_landed_gentleman;Country Leader\n§GLanded Gentleman;;;;;;;;;;;;;
+capital_russian_military_man;Country Leader\n§GMilitary Man;;;;;;;;;;;;;
+capital_russian_lord_admiral;Country Leader\n§GLord Admiral;;;;;;;;;;;;;
+capital_russian_raving_loon;Country Leader\n§RRaving Loon;;;;;;;;;;;;;
+capital_russian_luddite;Country Leader\n§RLuddite;;;;;;;;;;;;;
+capital_russian_great_statesman;Country Leader\n§GGreat Statesman;;;;;;;;;;;;;
+capital_russian_backroom_boy;Country Leader\n§GBackroom Boy;;;;;;;;;;;;;
+capital_russian_great_reformer;Country Leader\n§GGreat Reformer;;;;;;;;;;;;;
+capital_russian_gauche_buffoon;Country Leader\n§RGauche Buffoon;;;;;;;;;;;;;
+capital_russian_administrative_genius;Country Leader\n§GAdministrative Genius;;;;;;;;;;;;;
+capital_russian_visionary_thinker;Country Leader\n§GVisionary Thinker;;;;;;;;;;;;;
+capital_russian_competent_placeholder;Country Leader\n§GCompetent Placeholder;;;;;;;;;;;;;
+capital_russian_imperious_autocrat;Country Leader\n§GImperious Autocrat;;;;;;;;;;;;;
+capital_russian_prince_of_terror;Country Leader\n§GPrince of Terror;;;;;;;;;;;;;
+capital_russian_efficient_sociopath;Country Leader\n§GEfficient Sociopath;;;;;;;;;;;;;
+capital_russian_pig_headed_isolationist;Country Leader\n§RPig-Headed Isolationist;;;;;;;;;;;;;
+capital_russian_ambitious_union_boss;Country Leader\n§GAmbitious Union Boss;;;;;;;;;;;;;
+capital_russian_dour_economist;Country Leader\n§RDour Economist;;;;;;;;;;;;;
 #############################################;;;;;;;x
 #South American Leaders;;;;;;;x
 #############################################;;;;;;;x
@@ -374,3 +528,25 @@ southamerican_ambitious_union_boss;§GAmbitious Union Boss§!;;;;;;;;;;;;;
 southamerican_ambitious_union_boss_desc;Our leader hails from the ranks of the blue-collar unions, a man who has worked his way up through the ranks... right to the very top.;;;;;;;;;;;;;
 southamerican_dour_economist;§RDour Economist§!;;;;;;;;;;;;;
 southamerican_dour_economist_desc;Our leader has a penchant for numbers and economics, even if he isn't particularly good with people.;;;;;;;;;;;;;
+capital_southamerican_expert_diplomat;Country Leader\n§GExpert Diplomat;;;;;;;;;;;;;
+capital_southamerican_successful_industrialist;Country Leader\n§GSuccessful Industrialist;;;;;;;;;;;;;
+capital_southamerican_ivory_tower_intellectual;Country Leader\n§GIvory Tower Intellectual;;;;;;;;;;;;;
+capital_southamerican_man_of_the_people;Country Leader\n§GMan of the People;;;;;;;;;;;;;
+capital_southamerican_landed_gentleman;Country Leader\n§GLanded Gentleman;;;;;;;;;;;;;
+capital_southamerican_military_man;Country Leader\n§GMilitary Man;;;;;;;;;;;;;
+capital_southamerican_lord_admiral;Country Leader\n§GLord Admiral;;;;;;;;;;;;;
+capital_southamerican_raving_loon;Country Leader\n§RRaving Loon;;;;;;;;;;;;;
+capital_southamerican_luddite;Country Leader\n§RLuddite;;;;;;;;;;;;;
+capital_southamerican_great_statesman;Country Leader\n§GGreat Statesman;;;;;;;;;;;;;
+capital_southamerican_backroom_boy;Country Leader\n§GBackroom Boy;;;;;;;;;;;;;
+capital_southamerican_great_reformer;Country Leader\n§GGreat Reformer;;;;;;;;;;;;;
+capital_southamerican_gauche_buffoon;Country Leader\n§RGauche Buffoon;;;;;;;;;;;;;
+capital_southamerican_administrative_genius;Country Leader\n§GAdministrative Genius;;;;;;;;;;;;;
+capital_southamerican_visionary_thinker;Country Leader\n§GVisionary Thinker;;;;;;;;;;;;;
+capital_southamerican_competent_placeholder;Country Leader\n§GCompetent Placeholder;;;;;;;;;;;;;
+capital_southamerican_imperious_autocrat;Country Leader\n§GImperious Autocrat;;;;;;;;;;;;;
+capital_southamerican_prince_of_terror;Country Leader\n§GPrince of Terror;;;;;;;;;;;;;
+capital_southamerican_efficient_sociopath;Country Leader\n§GEfficient Sociopath;;;;;;;;;;;;;
+capital_southamerican_pig_headed_isolationist;Country Leader\n§RPig-Headed Isolationist;;;;;;;;;;;;;
+capital_southamerican_ambitious_union_boss;Country Leader\n§GAmbitious Union Boss;;;;;;;;;;;;;
+capital_southamerican_dour_economist;Country Leader\n§RDour Economist;;;;;;;;;;;;;
